botão de trocar o tema estilizado

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Quiz App</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
             <button>
                 <div></div>
             </button>
-            <img src="/assets/images/icon-moon-dark.svg" alt="icone da lua">
+            <img src="./assets/images/icon-moon-dark.svg" alt="icone da lua">
        </div> 
     </header>
 
@@ -26,28 +27,28 @@
         <section class="assuntos">
             <button>
                 <div>
-                    <img src="/assets/images/icon-html.svg" alt="icone do HTML">
+                    <img src="./assets/images/icon-html.svg" alt="icone do HTML">
                 </div>
                 HTML
             </button>
 
             <button>
                 <div>
-                    <img src="/assets/images/icon-css.svg" alt="icone do CSS">
+                    <img src="./assets/images/icon-css.svg" alt="icone do CSS">
                 </div>
                 CSS
             </button>
 
             <button>
                 <div>
-                    <img src="/assets/images/icon-js.svg" alt="icone do Javascript">
+                    <img src="./assets/images/icon-js.svg" alt="icone do Javascript">
                 </div>
                 Javascript
             </button>
 
             <button>
                 <div>
-                    <img src="/assets/images/icon-accessibility.svg" alt="icone do acessibilidade">
+                    <img src="./assets/images/icon-accessibility.svg" alt="icone do acessibilidade">
                 </div>
                 Acessibilidade
             </button>
