--- a/resultado/resultado.html
+++ b/resultado/resultado.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="resultados.css">
+    <link rel="stylesheet" href="resultado.css">
     <title>Quiz App</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
             <p>de 10</p>
         </section>
 
-        <button>Jogar novamente</button>""
+        <button>Jogar novamente</button>
     </main>
 
 </body>
